Transfer all example from old repo

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -49,12 +49,78 @@ library
     , warp-tls
   default-language: Haskell2010
 
-executable okapi-exe
+executable calc-exe
   main-is: Main.hs
   other-modules:
       Paths_okapi
   hs-source-dirs:
-      app
+      examples/calc
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , http-api-data
+    , http-types
+    , mmorph
+    , mtl
+    , okapi
+    , random
+    , text
+    , transformers
+    , wai
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
+executable realworld-exe
+  main-is: Main.hs
+  other-modules:
+      Conduit.Auth
+      Conduit.Database
+      Conduit.Database.Query
+      Conduit.Database.Setup
+      Conduit.Server
+      Conduit.Type
+      Conduit.Type.Request
+      Conduit.Type.Response
+      Paths_okapi
+  hs-source-dirs:
+      examples/realworld
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , hasql
+    , hasql-th
+    , http-api-data
+    , http-types
+    , jwt
+    , mmorph
+    , mtl
+    , okapi
+    , parser-combinators
+    , profunctors
+    , random
+    , text
+    , time
+    , transformers
+    , vector
+    , wai
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
+executable todo-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/todo
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
