--- a/okapi.cabal
+++ b/okapi.cabal
@@ -115,6 +115,39 @@ executable realworld-exe
     , warp-tls
   default-language: Haskell2010
 
+executable servant-exe
+  main-is: Main.hs
+  other-modules:
+      OkapiAPI
+      ServantAPI
+      Template
+      Paths_okapi
+  hs-source-dirs:
+      examples/servant
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , http-api-data
+    , http-types
+    , lucid
+    , mmorph
+    , mtl
+    , okapi
+    , parser-combinators
+    , random
+    , servant
+    , servant-lucid
+    , servant-server
+    , text
+    , transformers
+    , wai
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
 executable todo-exe
   main-is: Main.hs
   other-modules:
