--- a/okapi.cabal
+++ b/okapi.cabal
@@ -74,6 +74,32 @@ executable calc-exe
     , warp-tls
   default-language: Haskell2010
 
+executable calc-no-do-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/calc-no-do
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , http-api-data
+    , http-types
+    , mmorph
+    , mtl
+    , okapi
+    , parser-combinators
+    , random
+    , text
+    , transformers
+    , wai
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
 executable realworld-exe
   main-is: Main.hs
   other-modules:
