--- a/package.yaml
+++ b/package.yaml
@@ -65,6 +65,16 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - okapi
+  calc-no-do-exe:
+    main:                Main.hs
+    source-dirs:         examples/calc-no-do
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - okapi
+    - parser-combinators
   todo-exe:
     main:                Main.hs
     source-dirs:         examples/todo
