--- a/package.yaml
+++ b/package.yaml
@@ -67,6 +67,15 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - okapi
+  calc-fish-exe:
+    main:                Main.hs
+    source-dirs:         examples/calc-fish
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - okapi
   calc-no-do-exe:
     main:                Main.hs
     source-dirs:         examples/calc-no-do
