--- a/okapi.cabal
+++ b/okapi.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Okapi
+      Okapi.EventSource
       Okapi.Function
       Okapi.Type
   other-modules:
@@ -37,16 +38,21 @@ library
     , base >=4.7 && <5
     , base64
     , bytestring
+    , containers
     , http-api-data
     , http-types
     , lucid
     , mmorph
     , mtl
     , random
+    , stm
     , text
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
@@ -63,6 +69,7 @@ executable calc-exe
     , base >=4.7 && <5
     , base64
     , bytestring
+    , containers
     , http-api-data
     , http-types
     , lucid
@@ -70,37 +77,14 @@ executable calc-exe
     , mtl
     , okapi
     , random
+    , stm
     , text
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , wai
-    , warp
-    , warp-tls
-  default-language: Haskell2010
-
-executable calc-fish-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/calc-fish
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , http-api-data
-    , http-types
-    , lucid
-    , mmorph
-    , mtl
-    , okapi
-    , random
-    , text
-    , transformers
-    , vault
-    , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
@@ -117,6 +101,7 @@ executable calc-no-do-exe
     , base >=4.7 && <5
     , base64
     , bytestring
+    , containers
     , http-api-data
     , http-types
     , lucid
@@ -125,10 +110,48 @@ executable calc-no-do-exe
     , okapi
     , parser-combinators
     , random
+    , stm
     , text
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , wai
+    , wai-extra
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
+executable chess-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/chess
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , extra
+    , http-api-data
+    , http-types
+    , lucid
+    , lucid-htmx
+    , mmorph
+    , mtl
+    , okapi
+    , random
+    , stm
+    , text
+    , transformers
+    , unagi-chan
+    , uuid
+    , vault
+    , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
@@ -166,12 +189,16 @@ executable realworld-exe
     , parser-combinators
     , profunctors
     , random
+    , stm
     , text
     , time
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , vector
     , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
@@ -191,6 +218,7 @@ executable servant-exe
     , base >=4.7 && <5
     , base64
     , bytestring
+    , containers
     , http-api-data
     , http-types
     , lucid
@@ -202,10 +230,14 @@ executable servant-exe
     , servant
     , servant-lucid
     , servant-server
+    , stm
     , text
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
@@ -222,6 +254,7 @@ executable todo-exe
     , base >=4.7 && <5
     , base64
     , bytestring
+    , containers
     , http-api-data
     , http-types
     , lucid
@@ -229,10 +262,14 @@ executable todo-exe
     , mtl
     , okapi
     , random
+    , stm
     , text
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
@@ -250,6 +287,7 @@ test-suite okapi-test
     , base >=4.7 && <5
     , base64
     , bytestring
+    , containers
     , http-api-data
     , http-types
     , lucid
@@ -257,10 +295,14 @@ test-suite okapi-test
     , mtl
     , okapi
     , random
+    , stm
     , text
     , transformers
+    , unagi-chan
+    , uuid
     , vault
     , wai
+    , wai-extra
     , warp
     , warp-tls
   default-language: Haskell2010
