--- a/package.yaml
+++ b/package.yaml
@@ -20,22 +20,27 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/okapi#readme>
 
 dependencies:
-- base >= 4.7 && < 5
 - aeson
+- base >= 4.7 && < 5
 - base64
 - bytestring
+- containers
 - http-api-data
 - http-types
 - lucid
 - mmorph
 - mtl
 - random
-- wai
-- warp
-- warp-tls
+- stm
 - text
 - transformers
+- unagi-chan
+- uuid
 - vault
+- wai
+- wai-extra
+- warp
+- warp-tls
 
 library:
   source-dirs: src
@@ -67,15 +72,6 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - okapi
-  calc-fish-exe:
-    main:                Main.hs
-    source-dirs:         examples/calc-fish
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
   calc-no-do-exe:
     main:                Main.hs
     source-dirs:         examples/calc-no-do
@@ -95,6 +91,25 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - okapi
+  chess-exe:
+    main:                Main.hs
+    source-dirs:         examples/chess
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - okapi
+    - aeson
+    - bytestring
+    - extra
+    - http-api-data 
+    - lucid
+    - lucid-htmx
+    - text
+    - stm
+    - unagi-chan
+    - containers
   servant-exe:
     main:                Main.hs
     source-dirs:         examples/servant
