--- a/package.yaml
+++ b/package.yaml
@@ -103,6 +103,7 @@ executables:
     - aeson
     - bytestring
     - extra
+    - interpolatedstring-perl6
     - http-api-data 
     - lucid
     - lucid-htmx
