--- a/okapi.cabal
+++ b/okapi.cabal
@@ -278,6 +278,40 @@ executable servant-exe
     , warp-tls
   default-language: Haskell2010
 
+executable sse-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/sse
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , http-api-data
+    , http-types
+    , lucid
+    , mmorph
+    , mtl
+    , okapi
+    , random
+    , slave-thread
+    , stm
+    , text
+    , time
+    , transformers
+    , unagi-chan
+    , uuid
+    , vault
+    , wai
+    , wai-extra
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
 executable todo-exe
   main-is: Main.hs
   other-modules:
