--- a/package.yaml
+++ b/package.yaml
@@ -45,110 +45,110 @@ dependencies:
 library:
   source-dirs: src
 
-executables:
-  realworld-exe:
-    main:                Main.hs
-    source-dirs:         examples/realworld
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-    - containers
-    - hasql
-    - hasql-th
-    - jwt
-    - parser-combinators
-    - time
-    - vector
-    - profunctors
-  calc-comp:
-    main:                Main.hs
-    source-dirs:         examples/calc-comp
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-  calc-exe:
-    main:                Main.hs
-    source-dirs:         examples/calc
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-  calc-no-do-exe:
-    main:                Main.hs
-    source-dirs:         examples/calc-no-do
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-    - parser-combinators
-  todo-exe:
-    main:                Main.hs
-    source-dirs:         examples/todo
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-  chess-exe:
-    main:                Main.hs
-    source-dirs:         examples/chess
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-    - aeson
-    - bytestring
-    - extra
-    - interpolatedstring-perl6
-    - http-api-data 
-    - lucid
-    - lucid-htmx
-    - text
-    - time
-    - slave-thread
-    - stm
-    - unagi-chan
-    - containers
-    - parser-combinators
-  servant-exe:
-    main:                Main.hs
-    source-dirs:         examples/servant
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-    - lucid
-    - parser-combinators
-    - servant
-    - servant-lucid
-    - servant-server
-  sse-exe:
-    main:                Main.hs
-    source-dirs:         examples/sse
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - okapi
-    - slave-thread
-    - time
-    - bytestring
+# executables:
+#   realworld-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/realworld
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#     - containers
+#     - hasql
+#     - hasql-th
+#     - jwt
+#     - parser-combinators
+#     - time
+#     - vector
+#     - profunctors
+#   calc-comp:
+#     main:                Main.hs
+#     source-dirs:         examples/calc-comp
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#   calc-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/calc
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#   calc-no-do-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/calc-no-do
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#     - parser-combinators
+#   todo-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/todo
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#   chess-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/chess
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#     - aeson
+#     - bytestring
+#     - extra
+#     - interpolatedstring-perl6
+#     - http-api-data 
+#     - lucid
+#     - lucid-htmx
+#     - text
+#     - time
+#     - slave-thread
+#     - stm
+#     - unagi-chan
+#     - containers
+#     - parser-combinators
+#   servant-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/servant
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#     - lucid
+#     - parser-combinators
+#     - servant
+#     - servant-lucid
+#     - servant-server
+#   sse-exe:
+#     main:                Main.hs
+#     source-dirs:         examples/sse
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - okapi
+#     - slave-thread
+#     - time
+#     - bytestring
 
 
 tests:
