Remove query param check from respond; Add cookies helper

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -42,6 +42,7 @@ library
     , base64
     , bytestring
     , containers
+    , cookie
     , http-api-data
     , http-types
     , lucid
@@ -73,6 +74,7 @@ test-suite okapi-test
     , base64
     , bytestring
     , containers
+    , cookie
     , http-api-data
     , http-types
     , lucid
