--- a/okapi.cabal
+++ b/okapi.cabal
@@ -67,6 +67,40 @@ library
     , warp-tls
   default-language: Haskell2010
 
+executable calc-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/calc
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson >=1.4.7
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , cookie
+    , extra
+    , http-api-data
+    , http-types
+    , lucid
+    , mmorph
+    , mtl
+    , okapi
+    , parser-combinators
+    , stm
+    , text
+    , transformers
+    , unagi-chan
+    , uuid
+    , vault
+    , wai
+    , wai-extra
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
 test-suite okapi-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
