--- a/okapi.cabal
+++ b/okapi.cabal
@@ -67,12 +67,12 @@ library
     , warp-tls
   default-language: Haskell2010
 
-executable calc-exe
+executable calculator-exe
   main-is: Main.hs
   other-modules:
       Paths_okapi
   hs-source-dirs:
-      examples/calc
+      examples/calculator
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson >=1.4.7
@@ -89,6 +89,41 @@ executable calc-exe
     , mtl
     , okapi
     , parser-combinators
+    , stm
+    , text
+    , transformers
+    , unagi-chan
+    , uuid
+    , vault
+    , wai
+    , wai-extra
+    , warp
+    , warp-tls
+  default-language: Haskell2010
+
+executable todo-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/todo
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson >=1.4.7
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , cookie
+    , extra
+    , http-api-data
+    , http-types
+    , lucid
+    , mmorph
+    , mtl
+    , okapi
+    , parser-combinators
+    , sqlite-simple
     , stm
     , text
     , transformers
