Reorganize modules; fix imports

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -32,6 +32,7 @@ library
       Okapi.Failure
       Okapi.Internal.Functions.Application
       Okapi.Internal.Functions.Event
+      Okapi.Internal.Functions.Failure
       Okapi.Internal.Functions.Parser
       Okapi.Internal.Functions.Response
       Okapi.Internal.Functions.Route
