--- a/okapi.cabal
+++ b/okapi.cabal
@@ -31,6 +31,7 @@ library
       Okapi.Application
       Okapi.Event
       Okapi.Parser
+      Okapi.Pattern
       Okapi.Response
       Okapi.Route
       Okapi.Test
