Work Request decoders and encoders; begin rewriting tests

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -31,7 +31,7 @@ library
       Okapi.Application
       Okapi.Event
       Okapi.Parser
-      Okapi.Pattern
+      Okapi.Patterns
       Okapi.Response
       Okapi.Route
       Okapi.Test
