Solidify docs TOC before release; fix examples; add some new parsers

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -39,25 +39,19 @@ library
     , base64
     , bytestring
     , containers
-    , contravariant
     , cookie
     , cryptonite
     , extra
     , http-api-data
     , http-types
-    , invariant
     , memory
     , mmorph
     , mtl
     , network
     , parser-combinators
-    , random
-    , stm
-    , template-haskell
     , text
     , transformers
     , unagi-chan
-    , uuid
     , vault
     , wai
     , wai-extra
@@ -81,26 +75,59 @@ executable calculator-exe
     , base64
     , bytestring
     , containers
-    , contravariant
     , cookie
     , cryptonite
     , extra
     , http-api-data
     , http-types
-    , invariant
     , memory
     , mmorph
     , mtl
     , network
     , okapi
     , parser-combinators
-    , random
-    , stm
-    , template-haskell
     , text
     , transformers
     , unagi-chan
-    , uuid
+    , vault
+    , wai
+    , wai-extra
+    , wai-websockets
+    , warp
+    , warp-tls
+    , websockets
+  default-language: Haskell2010
+
+executable sse-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/sse
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson >=1.4.7
+    , attoparsec
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , cookie
+    , cryptonite
+    , extra
+    , http-api-data
+    , http-types
+    , memory
+    , mmorph
+    , mtl
+    , network
+    , okapi
+    , parser-combinators
+    , slave-thread
+    , text
+    , time
+    , transformers
+    , unagi-chan
     , vault
     , wai
     , wai-extra
@@ -124,27 +151,21 @@ executable todo-exe
     , base64
     , bytestring
     , containers
-    , contravariant
     , cookie
     , cryptonite
     , extra
     , http-api-data
     , http-types
-    , invariant
     , memory
     , mmorph
     , mtl
     , network
     , okapi
     , parser-combinators
-    , random
     , sqlite-simple
-    , stm
-    , template-haskell
     , text
     , transformers
     , unagi-chan
-    , uuid
     , vault
     , wai
     , wai-extra
@@ -169,27 +190,21 @@ test-suite okapi-test
     , base64
     , bytestring
     , containers
-    , contravariant
     , cookie
     , cryptonite
     , doctest-parallel
     , extra
     , http-api-data
     , http-types
-    , invariant
     , memory
     , mmorph
     , mtl
     , network
     , okapi
     , parser-combinators
-    , random
-    , stm
-    , template-haskell
     , text
     , transformers
     , unagi-chan
-    , uuid
     , vault
     , wai
     , wai-extra
