--- a/package.yaml
+++ b/package.yaml
@@ -24,25 +24,19 @@ dependencies:
 - base64
 - bytestring
 - containers
-- contravariant
 - cookie
 - cryptonite
 - extra
 - http-api-data
 - http-types
-- invariant
 - memory
 - mmorph
 - mtl
 - network
 - parser-combinators
-- random
-- stm
-- template-haskell
 - text
 - transformers
 - unagi-chan
-- uuid
 - vault
 - wai
 - wai-extra
@@ -128,18 +122,18 @@ executables:
   #   - servant
   #   - servant-lucid
   #   - servant-server
-  # sse-exe:
-  #   main:                Main.hs
-  #   source-dirs:         examples/sse
-  #   ghc-options:
-  #   - -threaded
-  #   - -rtsopts
-  #   - -with-rtsopts=-N
-  #   dependencies:
-  #   - okapi
-  #   - slave-thread
-  #   - time
-  #   - bytestring
+  sse-exe:
+    main:                Main.hs
+    source-dirs:         examples/sse
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - okapi
+    - slave-thread
+    - time
+    - bytestring
 
 tests:
   okapi-test:
