--- a/package.yaml
+++ b/package.yaml
@@ -134,6 +134,15 @@ executables:
     - slave-thread
     - time
     - bytestring
+  static-exe:
+    main:                Main.hs
+    source-dirs:         examples/static
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - okapi
 
 tests:
   okapi-test:
